--- a/index.html
+++ b/index.html
@@ -9,37 +9,47 @@
     <div class="header">
         <div class="header-center">
             <img class="logo-wight" src="image/logo.jpg" alt="logo">
+                <div class="header-navi">
+                    <ul>
+                        <a href="/"><li class="main">Главная</li></a>
+                        <a href="/"><li class="newss">Новости</li></a>
+                        <a href="/"><li class="archiv">Архив</li></a>
+                        <a href="/"><li class="wakans">Вакансии</li></a>
+                        <a href="/"><li class="kontacts">Контакты</li></a>
+                    </ul>
+                </div>
         </div>
     </div>
     <div class="posts">
         <div>
-            <div class="item">
+            <div class="item1">
                 <div>
-                    <img src="https://im0-tub-ru.yandex.net/i?id=2245954679f1f034475aabe2bf9abc6b&n=13" alt="new post 1">
+                    <img src="https://cdn25.img.ria.ru/images/07e4/02/15/1565057043_0:183:2991:1865_1280x0_80_0_0_9cf98130bdf5fad45ccecd371dd18f25.jpg.webp" alt="new post 1" width="500px">
                 </div>
                 <h3>
-                    new post 1
+                    Суд вынес приговор по делу о пытках в ярославской колонии
                 </h3>
                 <div>
                     <p>
-                        new post description from html<br>
-                        stas dslfnsdljfbadsbhfds
+                        Суд назначил сроки от трех лет до четырех лет и трех месяцев колонии одиннадцати из тринадцати обвиняемых в пытках в ИК-1 в Ярославле, сообщается в Telegram-канале фонда "Общественный вердикт", адвокат которого представляла интересы потерпевшего заключенного Евгения Макарова.
+                        Шестерых из осужденных освободили в зале суда, поскольку они уже отбыли назначенные сроки под стражей.
+                        Двух фигурантов суд оправдал — бывшего заместителя начальника колонии по вопросам безопасности Игита Михайлова и занимавшего на момент инцидента должность врио руководителя ИК Дмитрия Николаева. Защита Макарова подаст жалобу на это решение.
                     </p>
                 </div>
             </div>
 
 
-            <div class="item">
+            <div class="item2">
                 <div>
-                    <img src="https://im0-tub-ru.yandex.net/i?id=2245954679f1f034475aabe2bf9abc6b&n=13" alt="new post 2">
+                    <img src="https://cdn25.img.ria.ru/images/07e4/0b/12/1585184463_0:417:2899:2048_1280x0_80_0_0_ed1c77930d70bf6a2392a16f80e0dae2.jpg.webp" alt="new post 2" width="500px">
                 </div>
                 <h3>
-                    new post 2
+                    Не судом единым. Каковы шансы Трампа "вернуть победу"
                 </h3>
                 <div>
                     <p>
-                        new post description from html<br>
-                        stas dslfnsdljfbadsbhfds
+                        Прошло более двух недель после выборов президента США, но результат по-прежнему не очевиден. Пока Джо Байден принимает поздравления, Дональд Трамп и его команда продолжают шествие по судам — не слишком успешно, однако точку в разбирательствах ставить рано. Есть ли у республиканцев шанс удержаться в Белом доме, разбиралось РИА Новости.
+                        Кто знает, какая будет администрация, но эта локдауна не допустит", — заявил Дональд Трамп журналистам в прошлую пятницу. Особое внимание общественности привлекли вовсе не оценки перспектив эпидемии, а хотя бы гипотетическое согласие действующего президента с тем, что у Белого дома может быть другой хозяин.
                     </p>
                 </div>
             </div>
