решётки используются в роли заглушек, в случае временного отсутсвия ссылки

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 <div class="header-navi">
                     <ul>
                         <a href="/"><li class="main">Главная</li></a>
-                        <a href="/"><li class="newss">Новости</li></a>
-                        <a href="/"><li class="archiv">Архив</li></a>
-                        <a href="/"><li class="wakans">Вакансии</li></a>
-                        <a href="/"><li class="kontacts">Контакты</li></a>
+                        <a href="#"><li class="newss">Новости</li></a>
+                        <a href="#"><li class="archiv">Архив</li></a>
+                        <a href="#"><li class="wakans">Вакансии</li></a>
+                        <a href="#"><li class="kontacts">Контакты</li></a>
                     </ul>
                 </div>
         </div>
