--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             <img class="logo-wight" src="image/logo.jpg" alt="logo">
                 <div class="header-navi">
                     <ul>
-                        <a href="/"><li class="main">Главная</li></a>
-                        <a href="#"><li class="newss">Новости</li></a>
-                        <a href="#"><li class="archiv">Архив</li></a>
-                        <a href="#"><li class="wakans">Вакансии</li></a>
-                        <a href="#"><li class="kontacts">Контакты</li></a>
+                        <a href="index.html"><li class="menu-item">Главная</li></a>
+                        <a href="#"><li class="menu-item">Новости</li></a>
+                        <a href="#"><li class="menu-item">Архив</li></a>
+                        <a href="#"><li class="menu-item">Вакансии</li></a>
+                        <a href="#"><li class="menu-item">Контакты</li></a>
                     </ul>
                 </div>
         </div>
