--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
                     <ul>
                         <li><a href="index.html">Главная</a></li>
                         <li><a href="#">Новости</a></li>
-                        <li><a href="#">Архив</a></li>
+                        <div class="archiv"><li><a href="#">Архив</a>
+                                <ul>
+                                    <li><a href="#">2017</a></li>
+                                    <li><a href="#">2018</a></li>
+                                    <li><a href="#">2019</a></li>
+                                    <li><a href="#">2020</a></li>
+                                </ul>
+                    </li></div>
                         <li><a href="#">Вакансии</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
                 </div>
-                <stats></stats>
-
                 <div class="search">
-                    <form action="">
-                        <input class="search-input" type="text">
+                    <form action="" method="get">
+                        <input name="search" class="search-input" type="text">
                         <button class="search-button" type="submit">найти</button>
                     </form>
                 </div>
@@ -124,5 +129,25 @@
             </div>
         </div>
     </div>
+        <div class="container-footer">
+            <div class="footer">
+                <div class="logo-footer">
+                    <a href="index.html"><img src="image/logo.png"></a>
+                </div>
+                    <div class="footer-ul">
+                        <ul>
+                            <li><a href="index.html">Главная</a></li>
+                            <li><a href="#">Новости</a></li>
+                            <li><a href="#">Архив</a></li>
+                         <li><a href="#">Вакансии</a></li>
+                        </ul>
+                    </div>
+                            <div class="location">
+                                <p>г. Залупинск,ул. Бибипа 7а<br>
+                                тел. +7(888)88-88-888
+                                </p>
+                            </div>
+            </div>
+        </div>
 </body>
 </html>
